[gd_scene load_steps=8 format=2]

[ext_resource path="res://StartMENU.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu01.png" type="Texture" id=2]
[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="StartMENU" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 51.0
margin_right = 289.0
margin_bottom = 33.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 238.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Dimension Jump"

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 141.0
margin_right = 198.0
margin_bottom = 77.0

[node name="Start" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_right = 57.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 0
text = "Start"

[node name="Quit" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_top = 27.0
margin_right = 57.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Quack" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_top = 54.0
margin_right = 57.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 4 )
text = "Quack"

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 173, 104 )
scale = Vector2( 1.01765, 1.3 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Quack" to="." method="_on_Quack_pressed"]
